--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,10 @@
     "permissions": [
       "activeTab",
       "downloads",
-      "scripting"
+      "scripting",
+      "declarativeContent",
+      "storage",
+      "*://*.omniedu.com/*"
     ],
     "host_permissions": [
       "<all_urls>"
@@ -19,13 +22,18 @@
       }
     },
     "background": {
-      "service_worker": "scripts/background.js"
+      "service_worker": "scripts/background.js",
+      "persistent": false
     },
     "content_scripts": [
       {
-        "matches": ["<all_urls>"],
+        "matches": ["*://*.omniedu.com/*"],
         "js": ["scripts/content.js"],
         "run_at": "document_end"
       }
-    ]
+    ],
+    "web_accessible_resources": [{
+      "resources": ["icons/*"],
+      "matches": ["<all_urls>"]
+    }]
   }
